--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <body>
-
+<head>
 <script>
 var audio = new Audio("arritia.mp3" ) ;
 
@@ -18,9 +18,16 @@ audio.play();
 
 </script>
 
-<center>
-<img src="arritia.png" alt="ARRITIA BIG GAY">
-</center>
+    <style>
+        }
+        .imgbox {
+            height: auto;
+        }
+    </style>
+</head>
+
+<div class="imgbox">
+    <img src="arritia.png">
 
 </body>
   
