--- a/index.html
+++ b/index.html
@@ -19,15 +19,26 @@ audio.play();
 </script>
 
     <style>
-        }
-        .imgbox {
+        .arritia
+	  {
+		  position: absolute;
             height: auto;
         }
+	  .nope
+       {
+		position: relative;
+  		display: block;
+ 		 margin-left: auto;
+  		margin-right: auto;
+  		width: 50%;
+
+       }
     </style>
 </head>
 
-<div class="imgbox">
-    <img src="arritia.png">
+<div style="position: relative; left: 0; top: 0;">
+    <img src="arritia.png" class="arritia">
+    <img src="nope.png" class="nope">
 
 </body>
   
