--- a/index.html
+++ b/index.html
@@ -1,45 +1,59 @@
-<!doctype html>
-
-<html>
-<body>
-<head>
-<script>
-var audio = new Audio("arritia.mp3" ) ;
-
-audio.oncanplaythrough = function(){
-audio.play();
-}
-
-audio.loop = true;
-
-audio.onended = function(){
-audio.play();
-}
-
-</script>
-
-    <style>
-        .arritia
-	  {
-		  position: absolute;
-            height: auto;
-        }
-	  .nope
-       {
-		position: relative;
-  		display: block;
- 		 margin-left: auto;
-  		margin-right: auto;
-  		width: 50%;
-
-       }
-    </style>
-</head>
-
-<div style="position: relative; left: 0; top: 0;">
-    <img src="arritia.png" class="arritia">
-    <img src="nope.png" class="nope">
-
-</body>
-  
-</html>
+<div class="modal-content">
+        <div class="modal-body">
+            <p>
+        		</p><p><strong><u><span style="font-size:48px;">TERMS OF SERVICE</span></u></strong><br><br>By
+ visiting arritia’s virtual store and accessing its services, packages, 
+information, etc. we provide, you understand and agree to the following 
+terms and conditions as stated in this policy (Known as a 'User 
+Agreement'), along with the terms and conditions stated in our Privacy 
+Policy section (please find our Privacy Policy section below for more 
+information about this).<br>&nbsp;<br><strong>I&nbsp;</strong>- All 
+packages purchased are final as all sold items are virtual goods and not
+ redeemable or usable in the real world. Due to this, we practice a no 
+refunds/chargeback policy unless an exception (or special agreement) is 
+created under the agreement of both parties (The user &amp; arritia’s 
+Administration Team<br><br><strong>II</strong> - Attempts to bypass or 
+break our refund/chargeback policy via filing chargeback case with your 
+credit card company will result in a permanent ban from all of arritia’s
+ servers. These actions can also be acted upon by the furthest extent of
+ the law.<br>&nbsp;<br><strong>III</strong> - We are not responsible for
+ any received item(s) purchased by you or a third party that has lost 
+the purchased item due to any of the following in-game experiences 
+including but not limited to:<br>A server or player data reset<br>A server punishment, Ex. Permanent Ban, Mute, ect.<br>Getting killed or dying by any player(s), mob(s) or by any natural consequences such as dying of hunger, fall damage, ect.<br>Getting banned on arritia's Discord or Twitch stream.<br><br><strong>IV</strong>
+ - We have full access and control of perks, features, elements and 
+contents of the purchasable goods and packages in our store as well as 
+in-game. This most likely will rarely happen, however, it is within the 
+realm of possibility that a certain feature or element of a rank or any 
+other content in the virtual store will be edited, refined to work 
+differently, be fixed or removed, if chosen necessary by arritia’s 
+administration team.<br>&nbsp;<br><strong>V</strong> - If any of the server(s) or gamemode(s) on arritia's server are to ever shut down, refunds will <u>not</u> be available.<br><br><strong>VI</strong>
+ - You must be above the legal age of 18 or have permission from a 
+parent or legal guardian to make any purchases or payments to our online
+ store.<br>&nbsp;<br><strong>VII</strong> - Before purchasing any of our
+ online packages, you must enter in the provided slots for personal 
+information about yourself or of the credit card and/or money provider 
+(Name, address, ect.). By accepting these terms, you automatically agree
+ that this information accurate and up to date.<br>&nbsp;<br><strong>VIII</strong> - We do not take any liability for our online goods being sold by third party users.<br>&nbsp;<br><strong>IX</strong>
+ - No information obtained by you from our online store or through any 
+other third party should make any guarantee, warranty, conditions or any
+ other agreement of any kind, except for those exclusively shown in 
+these terms.<br>&nbsp;<br><strong>X</strong> - Purchasing any virtual 
+goods from our online store for someone else is not allowed unless they 
+grant you personal and explicit permission to do so.<br>&nbsp;<br><strong>XI</strong>
+ - You are responsible for entering the correct username(s) for the 
+package(s) that you will be/are purchasing! If you still manage to enter
+ the incorrect username, please contact Jordad on Discord and the issue 
+will be resolved as soon as possible!<br>&nbsp;<br><strong>Privacy Policy:</strong>
+ Your information, whether it has been shared publicly or privately 
+previously, will not be sold, exchanged or given to any other company 
+for any personal/commercial reason whatsoever, without your direct 
+consent from the user responsible for the purchases of the item(s). The 
+information provided will only be used for processing the payment, 
+issues and revolving the purchased packages and/or delivery of purchased
+ goods.<br><br><strong>LEGAL INFORMATION</strong><br>Arritia, Arritia's 
+server, and Arritia's administration is in no way affiliated with 
+Mojang, AB. Nor should it be considered a company endorsed by Mojang, 
+AB.<br>For more support, questions and/or concerns, please contact Jordad through through Arritia's Discord channel!</p><p><strong>NOTICE: A premium Minecraft account is required to access and play on the server.</strong><br><em>Minecraft ®/TM &amp; © 2009-2020 Mojang / Notch</em></p>
+        	<p></p>
+        </div>
+    </div>
