--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
         <div class="modal-body">
             <p>
         		</p><p><strong><u><span style="font-size:48px;">TERMS OF SERVICE</span></u></strong><br><br>By
- visiting arritia’s virtual store and accessing its services, packages, 
+ visiting arritia's virtual store and accessing its services, packages, 
 information, etc. we provide, you understand and agree to the following 
 terms and conditions as stated in this policy (Known as a 'User 
 Agreement'), along with the terms and conditions stated in our Privacy 
@@ -11,10 +11,10 @@ information about this).<br>&nbsp;<br><strong>I&nbsp;</strong>- All
 packages purchased are final as all sold items are virtual goods and not
  redeemable or usable in the real world. Due to this, we practice a no 
 refunds/chargeback policy unless an exception (or special agreement) is 
-created under the agreement of both parties (The user &amp; arritia’s 
+created under the agreement of both parties (The user &amp; arritia's 
 Administration Team<br><br><strong>II</strong> - Attempts to bypass or 
 break our refund/chargeback policy via filing chargeback case with your 
-credit card company will result in a permanent ban from all of arritia’s
+credit card company will result in a permanent ban from all of arritia's
  servers. These actions can also be acted upon by the furthest extent of
  the law.<br>&nbsp;<br><strong>III</strong> - We are not responsible for
  any received item(s) purchased by you or a third party that has lost 
@@ -25,7 +25,7 @@ contents of the purchasable goods and packages in our store as well as
 in-game. This most likely will rarely happen, however, it is within the 
 realm of possibility that a certain feature or element of a rank or any 
 other content in the virtual store will be edited, refined to work 
-differently, be fixed or removed, if chosen necessary by arritia’s 
+differently, be fixed or removed, if chosen necessary by arritia's 
 administration team.<br>&nbsp;<br><strong>V</strong> - If any of the server(s) or gamemode(s) on arritia's server are to ever shut down, refunds will <u>not</u> be available.<br><br><strong>VI</strong>
  - You must be above the legal age of 18 or have permission from a 
 parent or legal guardian to make any purchases or payments to our online
