--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ issues and revolving the purchased packages and/or delivery of purchased
  goods.<br><br><strong>LEGAL INFORMATION</strong><br>Arritia, Arritia's 
 server, and Arritia's administration is in no way affiliated with 
 Mojang, AB. Nor should it be considered a company endorsed by Mojang, 
-AB.<br>For more support, questions and/or concerns, please contact Jordad through through Arritia's Discord channel!</p><p><strong>NOTICE: A premium Minecraft account is required to access and play on the server.</strong><br><em>Minecraft ®/TM &amp; © 2009-2020 Mojang / Notch</em></p>
+AB.<br>For more support, questions and/or concerns, please contact Jordad through through Arritia's Discord channel!</p><p><strong>NOTICE: A premium Minecraft account is required to access and play on the server.</strong><br><em>Minecraft <sup>&reg; / &trade; &amp; &copy;</sup> / 2009-2020 Mojang / Notch</em></p>
         	<p></p>
         </div>
     </div>
