--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@ credit card company will result in a permanent ban from all of arritia's
  the law.<br>&nbsp;<br><strong>III</strong> - We are not responsible for
  any received item(s) purchased by you or a third party that has lost 
 the purchased item due to any of the following in-game experiences 
-including but not limited to:<br>A server or player data reset<br>A server punishment, Ex. Permanent Ban, Mute, ect.<br>Getting killed or dying by any player(s), mob(s) or by any natural consequences such as dying of hunger, fall damage, ect.<br>Getting banned on arritia's Discord or Twitch stream.<br><br><strong>IV</strong>
+including but not limited to:<br>
+<span style="margin-left:2em">A server or player data reset</span><br><span style="margin-left:2em">A server punishment, Ex. Permanent Ban, Mute, ect.</span><br><span style="margin-left:2em">Getting killed or dying by any player(s), mob(s) or by any natural consequences such as dying of hunger, fall damage, ect.</span><br><span style="margin-left:2em">Getting banned on arritia's Discord or Twitch stream.</span><br><br><strong>IV</strong>
  - We have full access and control of perks, features, elements and 
 contents of the purchasable goods and packages in our store as well as 
 in-game. This most likely will rarely happen, however, it is within the 
